exchange 로직 수정 및 ExchangeService Test 코드 작성